--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,13 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+# Increase Gradle Memory
+org.gradle.jvmargs=-Xmx6G
 org.gradle.parallel=true
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.8
-loader_version=0.16.10
+minecraft_version=1.21.6
+yarn_mappings=1.21.6+build.1
+
+loader_version=0.15.5
+fabric_version=0.128.2+1.21.6
 
 # Mod Properties
 mod_version=1.1.0
@@ -14,5 +15,4 @@ maven_group=com.kevinsundqvistnorlen
 archives_base_name=rubi
 
 # Dependencies
-fabric_version=0.115.1+1.21.4
-minecraft_range=1.21.4
+minecraft_range=1.21.0
